REGRESSION (r203535): Web Inspector: Inspector overlay node info has disappeared https://bugs.webkit.org/show_bug.cgi?id=161264

Patch by Devin Rousso <dcrousso+webkit@gmail.com> on 2016-08-26
Reviewed by Joseph Pecoraro.

No new tests.  Fixing JavaScript error in Inspector overlay.

* inspector/InspectorOverlay.cpp:
(evaluateCommandInOverlay):
(WebCore::InspectorOverlay::evaluateInOverlay):
Add ASSERT to ensure that errors in the Inspector overlay will cause tests to crash.

* inspector/InspectorOverlayPage.js:
(DOMBuilder.prototype.appendTextNode):
Move textContent value to parameter of document.createTextNode.

Canonical link: https://commits.webkit.org/179443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205068 268f45cc-cd09-0410-ab3c-d52691b4dbfc